add using root to launch intents