@@ -20,24 +20,29 @@ public class RootUtils {
     public static String execute(@NonNull String suExecutable, @NonNull String command) {
         String result = null;
         try {
-            Process exec = Runtime.getRuntime().exec(suExecutable + "\n");
+            Process exec = new ProcessBuilder(suExecutable.trim().split("\\s+"))
+                .redirectErrorStream(true)
+                .start();
             BufferedReader bufferedReader = new BufferedReader(
                 new InputStreamReader(exec.getInputStream()));
             DataOutputStream dataOutputStream = new DataOutputStream(exec.getOutputStream());
             dataOutputStream.writeBytes(command);
             dataOutputStream.writeBytes("\nexit\n");
             dataOutputStream.flush();
+            StringBuilder builder = new StringBuilder();
+            String aux;
+            while ((aux = bufferedReader.readLine()) != null) {
+                if (builder.length() > 0) {
+                    builder.append('\n');
+                }
+                builder.append(aux);
+            }
             try {
                 exec.waitFor();
             } catch (InterruptedException e) {
                 Timber.e(e);
             }
-            if (bufferedReader.ready()) {
-                StringBuilder builder = new StringBuilder();
-                String aux;
-                while ((aux = bufferedReader.readLine()) != null) {
-                    builder.append(aux);
-                }
+            if (builder.length() > 0) {
                 result = builder.toString();
             }
         } catch (Exception e) {
